demo/cache.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: cache
  name: sciety--demo--cache
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: redis
  selector:
    app.kubernetes.io/component: cache
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: cache
  name: sciety--demo--cache
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: cache
  template:
    metadata:
      labels:
        app.kubernetes.io/component: cache
    spec:
      containers:
      - image: redis:7.2.0-alpine@sha256:5ddcd6e1a1ee0d3a2e9fe1abb427be987ab082e4756bdc513cd4293dacf05d27
        name: redis
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
